adds service worker & manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,6 @@
 {
-  "short_name": "Flickr Gallery",
+  "short_name": "Gallery",
+  "description": "Test Flickr Gallery description",
   "name": "Flickr Gallery",
   "icons": [
     {
